# fastqc-summary

./: .bumpversion.toml  .gitignore  CHANGELOG.md  README.md  fastqc-summary.def  main.py  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: docs-dev.yml  docs-release.yml
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/api/: index.html
dev/search/: search_index.json
dev/test-data/: index.html
docs/: api.md  index.md  test-data.md
src/fastqc_summary/: __init__.py  cli.py  parser.py  printerr.py  summaries.py
tests/: conftest.py  test_cli.py  test_integrations.py  test_parser.py  test_summaries.py
v2.0.0/: 404.html  index.html  sitemap.xml
v2.0.0/api/: index.html
v2.0.0/test-data/: index.html
v2.1.0/: 404.html  index.html  sitemap.xml
v2.1.0/api/: index.html
v2.1.0/test-data/: index.html
